--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200,600');
 
 * {
-    
+
     font-family: 'Montserrat', sans-serif;
     font-weight: 200;
     margin: 0;
@@ -53,7 +53,7 @@ article {
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: space-between;
-    }
+}
 
 article.overview {
     flex-direction: row;
@@ -61,10 +61,12 @@ article.overview {
 }
 
 h1 {
+    background-image: url(..//img/logoX600.svg);
+    background-repeat: no-repeat, repeat;
     margin: auto;
-    font-size: 2em;
-    font-weight: 600;
-    text-align: center;
+    width: 326px;
+    height: 184px;
+
 }
 
 h2 {
@@ -75,18 +77,31 @@ h2 {
 
 h3 {
     font-size: 1.5em;
-    margin: 28px 0px 0px 6px;
+    margin: 28px 0px 0px 0px;
     vertical-align: text-bottom;
 }
 
 h4 {
 
     font-size: 4em;
-    /* margin: 0px; */
+    margin: 9px;
+    margin-top: 34px;
 }
-h3::after{
-    content: attr(data-specify)
+
+span {
+    font-size: 1.5em;
+    margin: 14px 0px 0px 0px;
+    display: block;
 }
+.visible{
+    animation: toggleOn 0.3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+.inVisible{
+    animation: toggleOff 0.3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+#second{
+    margin: -28px 0px 0px 0px;}
+
 
 
 .temp19 article {
@@ -178,6 +193,7 @@ h3::after{
 }
 
 [data-occupancy='true'] article {
+    color: grey;
     background: rgba(59, 59, 59, 1);
     background: -moz-linear-gradient(left, rgba(59, 59, 59, 1) 0%, rgba(122, 122, 122, 1) 100%);
     background: -webkit-gradient(left top, right top, color-stop(0%, rgba(59, 59, 59, 1)), color-stop(100%, rgba(122, 122, 122, 1)));
@@ -193,8 +209,8 @@ h3::after{
     animation: scale-down-center 0.3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
-a:hover{
-    transform: scale(1.1)
+.fadeFast {
+    animation: scale-down-fast-center 0.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
 
@@ -206,21 +222,50 @@ a:hover{
         margin-bottom: 0px;
         font-size: 80%
     }
+
     a {
         width: 100%
     }
-    main{
+
+    main {
         flex-direction: column;
     }
+
     [data-occupancy='true'] article {
         margin-top: 2px;
     }
-    
+
+    h1 {
+        background-image: url(../img/logoX500.svg);
+
+        width: 60px;
+        height: 30px;
+    }
 }
 
 
 
 @keyframes scale-down-center {
+    100% {
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5);
+        opacity: 0;
+    }
+
+    10% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes scale-down-fast-center {
     100% {
         -webkit-transform: scale(0.5);
         transform: scale(0.5);
@@ -242,14 +287,40 @@ a:hover{
         opacity: 0;
     }
 
-    50% {
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5);
-        opacity: 0;
-    }
     100% {
         -webkit-transform: scale(1);
         transform: scale(1);
         opacity: 1;
+    }
+}
+
+@keyframes toggleOn {
+    0% {
+        display: none;
+        visibility: hidden;
+        opacity: 0;
+        transform: translateY(-15px);
+    }
+
+    100% {
+        display: block;
+        visibility: block;
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@keyframes toggleOff {
+    100% {
+        display: none;
+        visibility: hidden;
+        opacity: 0;
+        transform: translateY(15px);
+    }
+
+    0% {
+        display: block;
+        visibility: block;
+        opacity: 1;
+        transform: translateY(0);
     }
 }
