--- a/views/partials/detail.ejs
+++ b/views/partials/detail.ejs
@@ -7,7 +7,9 @@
             <h2> <%=room.name %> </h2>
             <h3> Temperatuur: <%=room.temp %>°C</h3>
             <h3> luchtkwaliteit: <%=room.co2Text %></h3>
-            <h3 data-specify='<%=room.mic_level %>/dB'> Geluidsniveau: <%=room.mic_levelText %> </h3>
+            <h3> Geluidsniveau: </h3>
+            <span id="first" class="visible"><%=room.mic_level %>/dB</span>
+            <span id="second"class="inVisible" > <%=room.mic_levelText %></span>
             <h4> Score: <%=room.score %> </h4>
         </article></a>
         <% }); %>
